tests/grammar/types/union_expr/union_expr_fail_0/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:14:33
   |
14 | expected: Container = config | {name = 1}
   |                                 ^ expected str, got int(1)
   |
